--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div>
     <div class="flex flex-col w-72 bg-white p-3 rounded-xl md:w-72">
       <div class="rounded-lg overflow-hidden">
-        <img src="./images/image-qr-code.png" alt="" >
+        <img src=".image-qr-code.png" alt="" >
       </div>
 
       <div>
